--- a/package.json
+++ b/package.json
@@ -1,26 +1,47 @@
 {
-  "name": "nodejs-dashing",
+  "name": "dashing-",
+  "description": "A simple nodejs application creating an overview page of all available dashboards in a Dashing project.",
   "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
+  "author": {
+    "name": "Christian Galsterer",
+    "url": "http://christiangalsterer.blogspot.com/"
+  },
+  "bugs": {
+    "url": "https://github.com/christiangalsterer/dashing-board/issues"
   },
   "dependencies": {
-    "body-parser": "~1.10.0",
-    "config": "^1.9.0",
-    "cookie-parser": "~1.3.3",
-    "debug": "~2.1.0",
-    "express": "~4.10.6",
-    "jade": "~1.8.1",
-    "morgan": "~1.5.0",
-    "serve-favicon": "~2.1.7"
+    "body-parser": "1.10.0",
+    "config": "1.9.0",
+    "cookie-parser": "1.3.3",
+    "debug": "2.1.0",
+    "express": "4.10.6",
+    "jade": "1.8.1",
+    "morgan": "1.5.0",
+    "serve-favicon": "2.1.7"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-develop": "~0.4.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "request": "~2.51.0",
-    "time-grunt": "~1.0.0",
-    "load-grunt-tasks": "~1.0.0"
+    "grunt": "0.4.5",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-develop": "0.4.0",
+    "grunt-nice-package": "0.9.2",
+    "load-grunt-tasks": "1.0.0",
+    "request": "2.51.0",
+    "time-grunt": "1.0.0"
+  },
+  "engines": {
+    "node": "*"
+  },
+  "homepage": "https://github.com/christiangalsterer/dashing-board",
+  "keywords": [
+    "nodejs",
+    "dashing"
+  ],
+  "license": "APSL-2.0",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:christiangalsterer/dashing-board.git"
+  },
+  "scripts": {
+    "start": "node ./bin/www"
   }
 }
